@@ -12,7 +12,7 @@ configure_file (
 if (CMAKE_CXX_COMPILER)
    # Add a C++ source file that will #include the main C headers. This "library"
    # does nothing other than validate that the C headers are valid C++ headers.
-   add_library (mongoc-cxx-check STATIC cpp-check.cpp)
+   add_library (mongoc-cxx-check OBJECT cpp-check.cpp)
    if (TARGET mongoc_static)
       target_link_libraries (mongoc-cxx-check PRIVATE mongoc_static)
    else ()
